<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingAcount"
    tools:layout_editor_absoluteY="25dp"
   >

    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/circleImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/defaultimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="16dp"
        android:text="@string/display_name"
        android:textSize="@dimen/Sizescore"
        app:layout_constraintEnd_toEndOf="@+id/circleImageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/circleImageView"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:text="@string/status"
        android:textSize="@dimen/Sizescore"
        app:layout_constraintBottom_toTopOf="@+id/btnChangeImage"
        app:layout_constraintEnd_toEndOf="@+id/txtDisplayName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtDisplayName"
        app:layout_constraintTop_toBottomOf="@+id/txtDisplayName" />

    <Button
        android:id="@+id/btnChangeImage"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_button_image"

        android:text="@string/change_image"
        android:textSize="@dimen/Sizescore"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnChangeStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnChangeStatus"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="84dp"

        android:background="@drawable/custom_button"
        android:text="@string/change_status"
        android:textSize="@dimen/Sizescore"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>