<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundprofile"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/defaultimage" />

    <TextView
        android:id="@+id/profile_displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/display_name"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_displayName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/current_user_status"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/profile_totalFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_send_req_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/total_friends"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/profile_send_req_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_decline_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/colorPrimary"
        android:paddingLeft="@dimen/padding_button"
        android:paddingRight="@dimen/padding_button"
        android:text="Gửi yêu cầu kết bạn"
        android:background="@drawable/custom_button" />

    <Button
        android:id="@+id/profile_decline_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:paddingLeft="@dimen/padding_button"
        android:paddingRight="@dimen/padding_button"
        android:backgroundTint="@color/colorButton"
        android:text="Từ chối yêu cầu kết bạn"
        android:background="@drawable/custom_button" />
</RelativeLayout>