<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="16dp"
    tools:context=".Quiz">
    <TextView
        android:id="@+id/text_view_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Score"
        android:textSize="@dimen/Sizescore"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/text_view_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_score"
        android:textSize="@dimen/Sizescore"
        android:textStyle="bold"
        android:text="@string/question_1_x"
        android:textColor="@android:color/black"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/Time"

        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/radio_group"
        android:layout_marginBottom="16dp"
        android:text="Here will be the question text\nHere will be the question text\nHere will be the question text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:freezesText="true"/>

    <RadioGroup
        android:id="@+id/radio_group"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:button="@drawable/custom_radiobutton"
            android:text="Option 1"
            android:textSize="@dimen/Sizescore"
            android:checked="true"
            android:freezesText="true"/>

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:button="@drawable/custom_radiobutton"
            android:text="Option 2"
            android:textSize="@dimen/Sizescore"
            android:freezesText="true"/>

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/Sizescore"
            android:padding="10dp"
            android:button="@drawable/custom_radiobutton"
            android:text="Option 3"
            android:freezesText="true"/>

    </RadioGroup>

    <Button
        android:enabled="true"
        android:id="@+id/button_confirm_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:background="@drawable/custom_button"
        android:layout_marginTop="16dp"
        android:text="Kiểm tra"
        android:textSize="@dimen/Sizescore"
        android:freezesText="true"/>
</RelativeLayout>